recupération de list des hits