@@ -16,6 +16,14 @@ import android.content.Context;
 import android.content.IntentFilter;
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
+import android.graphics.Canvas;
+import android.graphics.LinearGradient;
+import android.graphics.Matrix;
+import android.graphics.Paint;
+import android.graphics.PorterDuffXfermode;
+import android.graphics.Bitmap.Config;
+import android.graphics.PorterDuff.Mode;
+import android.graphics.Shader.TileMode;
 import android.graphics.drawable.Drawable;
 import android.net.ConnectivityManager;
 import android.os.Bundle;
@@ -32,6 +40,7 @@ import android.widget.ImageView;
 import android.widget.LinearLayout;
 import android.widget.ProgressBar;
 import android.widget.Toast;
+import android.widget.ImageView.ScaleType;
 
 import com.coboltforge.slidemenu.SlideMenu;
 import com.coboltforge.slidemenu.SlideMenu.SlideMenuItem;
@@ -66,6 +75,7 @@ public class MainActivity extends Activity implements
 	private boolean menuIsVisible = false;
 	private List<Hit> hits;
 	private AlertDialog alert;
+
 	@Override
 	public void onCreate(Bundle savedInstanceState) {
 
@@ -286,7 +296,7 @@ public class MainActivity extends Activity implements
 	@Override
 	public void onSlideMenuItemClick(int itemId) {
 		// TODO Auto-generated method stub
-//		Toast.makeText(this, "" + itemId, Toast.LENGTH_SHORT).show();
+		// Toast.makeText(this, "" + itemId, Toast.LENGTH_SHORT).show();
 		alert.show();
 		WSHelper.getInstance().gethitsById(itemId, manager, MainActivity.this);
 		menuIsVisible = false;
@@ -326,15 +336,15 @@ public class MainActivity extends Activity implements
 		for (int i = 0; i < hits.size(); i++) {
 			ImageView iv = new ImageView(this);
 			Hit hit = hits.get(i);
-			if(hit.getImg().length()==0)
+			if (hit.getImg().length() == 0)
 				hit.setImg("http://www.djluv.in/music/images/albums/1330236629_its-cover-not-found.jpg");
 			Log.i("img", "" + hit.img);
 			try {
 				URL url = new URL(hit.img);
-				URI uri = new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(), null);
-				iv.setImageDrawable(Drawable.createFromStream(
-						(InputStream) new URL(uri.toString()).getContent(),
-						""));
+				URI uri = new URI(url.getProtocol(), url.getHost(),
+						url.getPath(), url.getQuery(), null);
+				iv.setImageBitmap(createReflectedImages(getBitmapFromInputStream((InputStream) new URL(
+						uri.toString()).getContent())));
 			} catch (MalformedURLException e1) {
 				// TODO Auto-generated catch block
 				e1.printStackTrace();
@@ -345,23 +355,23 @@ public class MainActivity extends Activity implements
 				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
-			iv.setLayoutParams(new CoverFlow.LayoutParams(130, 130));
+			iv.setLayoutParams(new CoverFlow.LayoutParams(120, 180));
 			iv.setScaleType(ImageView.ScaleType.MATRIX);
 			imgView[hits.indexOf(hit)] = iv;
-			
+
 		}
 		Log.i("imgView", "" + imgView.length);
-		 CoverFlow coverFlow = (CoverFlow) findViewById(R.id.coverFlow1);
-		
-		 ImageAdapter coverImageAdapter = new ImageAdapter(this,imgView);
-		
-//		 coverImageAdapter.createReflectedImages();
-		
-		 coverFlow.setAdapter(coverImageAdapter);
-		
-		 coverFlow.setSpacing(-15);
-		 coverFlow.setSelection(0, true);
-		 alert.dismiss();
+		CoverFlow coverFlow = (CoverFlow) findViewById(R.id.coverFlow1);
+
+		ImageAdapter coverImageAdapter = new ImageAdapter(this, imgView);
+
+		// coverImageAdapter.createReflectedImages();
+
+		coverFlow.setAdapter(coverImageAdapter);
+
+		coverFlow.setSpacing(-15);
+		coverFlow.setSelection(0, true);
+		alert.dismiss();
 	}
 
 	@Override
@@ -369,18 +379,56 @@ public class MainActivity extends Activity implements
 		// TODO Auto-generated method stub
 
 	}
-//	public static Bitmap getBitmapFromURL(String src) {
-//	    try {
-//	        URL url = new URL(src);
-//	        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-//	        connection.setDoInput(true);
-//	        connection.connect();
-//	        InputStream input = connection.getInputStream();
-//	        Bitmap myBitmap = BitmapFactory.decodeStream(input);
-//	        return myBitmap;
-//	    } catch (IOException e) {
-//	        e.printStackTrace();
-//	        return null;
-//	    }
-//	}
+
+	public static Bitmap getBitmapFromInputStream(InputStream input) {
+		Bitmap myBitmap = BitmapFactory.decodeStream(input);
+		return myBitmap;
+	}
+
+	public Bitmap createReflectedImages(Bitmap originalImage) {
+		// The gap we want between the reflection and the original image
+		final int reflectionGap = 4;
+		int width = originalImage.getWidth();
+		int height = originalImage.getHeight();
+
+		// This will not scale but will flip on the Y axis
+		Matrix matrix = new Matrix();
+		matrix.preScale(1, -1);
+
+		// Create a Bitmap with the flip matrix applied to it.
+		// We only want the bottom half of the image
+		Bitmap reflectionImage = Bitmap.createBitmap(originalImage, 0,
+				height / 2, width, height / 2, matrix, false);
+
+		// Create a new bitmap with same width but taller to fit reflection
+		Bitmap bitmapWithReflection = Bitmap.createBitmap(width,
+				(height + height / 2), Config.ARGB_8888);
+
+		// Create a new Canvas with the bitmap that's big enough for
+		// the image plus gap plus reflection
+		Canvas canvas = new Canvas(bitmapWithReflection);
+		// Draw in the original image
+		canvas.drawBitmap(originalImage, 0, 0, null);
+		// Draw in the gap
+		Paint deafaultPaint = new Paint();
+		canvas.drawRect(0, height, width, height + reflectionGap, deafaultPaint);
+		// Draw in the reflection
+		canvas.drawBitmap(reflectionImage, 0, height + reflectionGap, null);
+
+		// Create a shader that is a linear gradient that covers the
+		// reflection
+		Paint paint = new Paint();
+		LinearGradient shader = new LinearGradient(0,
+				originalImage.getHeight(), 0, bitmapWithReflection.getHeight()
+						+ reflectionGap, 0x70ffffff, 0x00ffffff, TileMode.CLAMP);
+		// Set the paint to use this shader (linear gradient)
+		paint.setShader(shader);
+		// Set the Transfer mode to be porter duff and destination in
+		paint.setXfermode(new PorterDuffXfermode(Mode.DST_IN));
+		// Draw a rectangle using the paint with our linear gradient
+		canvas.drawRect(0, height, width, bitmapWithReflection.getHeight()
+				+ reflectionGap, paint);
+
+		return bitmapWithReflection;
+	}
 }
